[tool.poetry]
name = "bahai-obsidian"
version = "0.1.0"
description = "Convert Baha'i writings HTML files into Obsidian-flavored Markdown"
authors = ["Daniel Lyons <fusion@storytotell.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bahai_obsidian"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
b2o = "bahai_obsidian.hello:main"
